edits on design - part 2 and 3 of conflicts

--- a/_posts/thesis_chapters/2023-9-4-Design.md
+++ b/_posts/thesis_chapters/2023-9-4-Design.md
@@ -8,6 +8,7 @@ layout: post
 categories: chapter
 title: 4. Exploration of the Formative Learning Design Process
 ---
+
 -   [Research Questions - June 2023](#research-questions---june-2023)
 -   [Chapter Introduction](#chapter-introduction)
 -   [Exploring issues and context from practitioner interviews and
@@ -47,11 +48,11 @@ title: 4. Exploration of the Formative Learning Design Process
     -   [Using Physical Maps of Missions as Game Design Patterns -
         COMPRESS](#using-physical-maps-of-missions-as-game-design-patterns---compress)
         -   [Learning Dimensions Map](#learning-dimensions-map)
-        -   [NOTES ON TENSIONS WHICH THIS LEARNING MAP HAS POTENTIAL TO
-            ADDRESS](#notes-on-tensions-which-this-learning-map-has-potential-to-address)
-        -   [Resolving the conflict by minimising elements in an
-            informal
-            setting](#resolving-the-conflict-by-minimising-elements-in-an-informal-setting)
+        -   [Observations on tensions which the learning and
+            navigational maps have potential to
+            address.](#observations-on-tensions-which-the-learning-and-navigational-maps-have-potential-to-address.)
+        -   [Resolving the conflict in an informal setting by ignoring
+            it](#resolving-the-conflict-in-an-informal-setting-by-ignoring-it)
 -   [3. Participant conflict due to lack of access to
     tools](#participant-conflict-due-to-lack-of-access-to-tools)
     -   [Tensions between authenticity in choice of toolset and user
@@ -64,10 +65,14 @@ title: 4. Exploration of the Formative Learning Design Process
         template](#design-choices-of-the-half-baked-template)
         -   [Addressing barriers with
             template](#addressing-barriers-with-template)
-    -   [Observations on the impact of the half-baked game
-        template](#observations-on-the-impact-of-the-half-baked-game-template)
-        -   [Design behaviours encouraged through use of game
-            template](#design-behaviours-encouraged-through-use-of-game-template)
+    -   [Design behaviours encouraged through use of game
+        template](#design-behaviours-encouraged-through-use-of-game-template)
+        -   [Variable editing for
+            movement:](#variable-editing-for-movement)
+        -   [Level design and
+            prototyping:](#level-design-and-prototyping)
+        -   [Use of pixel art to seed narrative and art
+            creativity:](#use-of-pixel-art-to-seed-narrative-and-art-creativity)
         -   [Observations on design behaviours encouraged through use of
             game
             template](#observations-on-design-behaviours-encouraged-through-use-of-game-template)
@@ -405,10 +410,7 @@ To do this the next section concisely charts emerging tensions in activity throu
 Later larger contradictions of different scope are signposted and one key contradiction in tool use is analysed in more depth.
 
 <!-- to highlight possible tensions and contradictions between competing goals of interrelated activity systems. -->
-
 <!-- For example a common contradiction may be an immediate goal of children to mess around, play games and have fun while the goals of parent may be to maximise the acquisition of skills -->
-
-
 
 ## Summary of design evolution
 
@@ -417,7 +419,6 @@ see updated table in tables subdirectory
 -->
 
 The following table is provided to give the reader an overview of the stages and tools used. Emerging tensions in activity systems are used to explore the rationale for the creation and selection of these tools.
-
 
 <!-- Table from
 https://docs.google.com/document/d/1tBoXJWw-aZUcc8EsAvT195CtHLSM468YOCD0sGzOuoA/edit# -->
@@ -564,11 +565,7 @@ https://docs.google.com/document/d/1FIPn2dEB2aCKZi5z05j69cnHgpGNXFh1_SPV6h5l12g/
 <!-- NOTE - DEVELOP THIS ASPECT OF INCLUSIVE ENVIRONMENT TO REDUCE STRESS - MOVE FROM NEXT CHAPTER?  -->
 
 
-
-
 ## 1. Identity hardcore coding & dysfunctional group work
-
-NOTE - COMPRESS AND SIGNPOST
 
 **Participants stuck / demotivated : scope of ambition to high,  clashes of identity not hard core coders, no on-going playtesting, collaboration groups too big (transition),**
 
@@ -578,38 +575,37 @@ One family dropped out and in their exit interview they shared that at one point
 
 The value of playfulness is illustrated with one exit interview with a parent where they shared their reasons for leaving the program. At one stage after a week where they had missed a session, their family looked around and saw other groups involved in 'hardcore coding' and no longer felt at home. They compared this previous sessions which had more fun and group oriented activity.
 
-I was struck that his incident happened during a session where I had not played customary drama games to create an inclusive environment. The games had been omitted as I was responding to a sense of urgency coming from families to solve problems. The scarcity in facilitator time drove me to crack on supporting families to debug code errors.
+In my journal notes I reflect that his incident happened during a session where I had not played customary drama games to create an inclusive environment. That week I had omitted them as I felt a sense of urgency coming from families to solve their problems. The scarcity in facilitator time drove me to crack on supporting families to debug code errors.
 
+In previous sessions, members of this family were able to engage in planing via sketching on paper and in creating pixel art. Hoever in later sessions, they were reliant on others to implement code changes for their imagined game due to way the improvised group roles had emerged.
 
-**Gulfs between desires and reality**
+The freedom of choice and imagination allowed by designing on paper and via pixel art created compounding tensions. One crisis point involved a frustration of a child who was not able to implement a feature they wanted to add to the game next.
 
-While members of this family were able to engage in planing via sketching on paper and in creating pixel art, they were reliant on others to implement code changes. This was in part due to improvised group roles.
+DEVELOP WITH LIT
+To briefly summarise this dynamic using the language of 3GAT and agency we can say... x, y z
 
-The freedom of choice and imagination allowed by designing on paper and via pixel art created compounding tensions. One crisis point involved a frustration of a child who was not able to implement a feature they wanted to add to the game next:
+This aligns with research in this area explored in the LR which concieves coding practices as alien to certain groups in particular, and stress the importance of x.
 
+I have shared the crisis of this family in particular, as the process drove me to focus on and further develop inclusive cultural practices which are explored in chapter six.
 
 ## 2. Facilitator conflict addressing the Play Paradox
 
-This section addresses my interventions to resolve the play paradox between learner expression and choice and the curricular contents that teachers may want students to find [@hoyles_pedagogy_1992].
+This section addresses my interventions to resolve the play paradox between learner expression and choice and the curricular contents that teachers may want students to find [@hoyles_pedagogy_1992]. Anaylysis of my journal notes shows that I spent significant time attempting to resolve a  conflict between the informal choice driven process and aligning and supporting students' awareness of links to curriculum content on computational and systems thinking.
 
-NOTE - There are two sides of contracticition, one is the clash between curricullum and choice, the other is in my hesitancy introducing aciviites using the new tools of the maps due to potential overload and not enough time. 
+The rationale behind this is that I wanted to create resources and processes which are of potential value to practioners in the UK classroom. One of the audiences for this study were trainee computing teachers in my university faculty. The LR briefly explored ways in which digital game making is commonly aligned with curricular areas [@kafai_connected_2016]. For me the challenge was to find a way to support participants to explore these concepts without detracting from the choice oriented learning design.  
 
-
-I adapted and extended resources to suit use in more formal learning environments, e.g. particularly a secondary computing classroom.
-
-This conflict provoked me to create resources which could serve to pull participants towards more curricular goals. However, for these learners I did not introduce the resources consistently. This inaction on my part has been is helpful to  provide a clearer the focus of this study on the possibilities of informal spaces.
+This conflict provoked me to create resources which could serve to pull participants towards more curricular goals. I adapted and extended resources to suit use in more formal learning environments, e.g. particularly a secondary computing classroom.
 
 SIGNPOSTING WHY THIS SECTION IS USEFUL HERE
 
-
+NOTE - There are two sides of contracticition, one is the clash between curricullum and choice, the other is in my hesitancy introducing aciviites using the new tools of the maps due to potential overload and not enough time.
 
 <!-- stylised in a way that mirrored a map used for navigation in a quest-themed computer game.
 
 As learners traced a trail between the different island/missions they had visited, the map provoked learners to reflect on their journey and progress. However, this approach may be too labour and time intensive for many class environments.
 -->
 
-
-### Using Physical Maps of Missions as Game Design Patterns - COMPRESS
+### Using Physical Maps of Missions as Game Design Patterns
 
 I used flip chart paper and print outs to draw a coastal landscape with GDPs represented as different islands.  I asked learners to create and personalise a movable marker representing themselves. When learners selected their next mission, they moved their counter to the relevant island. Thus learners had to be intentional about their next goal and were implicitly encouraged to stick to it.
 
@@ -627,31 +623,29 @@ Despite minimal evidence due to a factor later explored, there were some observa
 
 | **Transcript**| **Description**|
 |----------------|------------------|
-|Mick(f): I'm putting the ones that are hardest further away from our home island. So, because keys and doors is quite tricky, I'm going to put that one over there in the corner, if that's one that you're working on.  | Mick cuts a out an image representing a GDP of key and doors.   |
+|Mick(f): I'm putting the ones that are hardest further away from our home island. So, because keys and doors is quite tricky, I'm going to put that one over there in the corner, if that's one that you're working on.  | Mick cuts a out an image from [^4] representing a GDP of key and doors.   |
 |  Olivia(c): So I've gone really far away on the map. <br/>   |  Olivia(c) quickly places her marker on that image and grins. Other parents and children to the right and left of her look at her marker.  |
 | Mick(f): Yeah.  |  Mick smiles too whilst walking to get and glue another cut out. |
-|  Olivia(c): Heh!  | Olivia walks back to her mother and asked to be picked up  |
-| Mick(f): There should be some blue tack if you are struggling to make your character stand up.   | Mick walks around the back of the group and sticks another GDP pattern on a different pre-drawn island.  Roxanne(p) notices Agnes's(c) falling character and passes the child blue   |
+|  Olivia(c): Heh!  | Olivia walks back to her mother and stretches out her arms to her mother who picks her up. Olivia whispers in her mother's ear  |
+| Mick(f): There should be some blue tack if you are struggling to make your character stand up.   | Mick walks around the back of the group and sticks another GDP pattern on a different pre-drawn island.  Roxanne(p) notices Agnes's(c) falling character and passes the child blue tack to help.  |
 | Rozanne(p): Oh that's something you were wanting to do |  Roxanne points at a cut out that Mick has just stuck down |
 |  Richie(c): I like the idea of making the enemies move |  Roxanne(p): Ok, there's a worksheet here about that. So you don't want to any any heath meter? |
 |  Richie(c): No. |   |
 |  Roxanne(p): At least not right now. You want to to do this, on a sheet, right here, here you go.  | Roxanne  waves sheet and smiles at Mick and laughs.   |
 |  Mick(f): Great that's good. We've got some sheets that I would recommend. That are almost like gateways to other places. One is to make your character move  when it moves around the screen.  | Mick moves hands when saying make your character move, indicating animation.   |
-|  Mick(f): Another is to make your enemies move around the screen to make it a bit harder. I know you guys have done that.  | Mick moves a pointed hand to indicate an enemy moving on the screen and then points to Clive and Pearl to indicate you guys.  
-|  x | x  |
-| x  | x  |
+|  Mick(f): Another is to make your enemies move around the screen to make it a bit harder. I know you guys have done that.  | Mick moves a pointed hand to indicate an enemy moving on the screen and then points to Clive and Pearl to indicate "you guys".  
+|
 
 <!-- It explores these tensions in relation to existing research and contains further discussion to inform possible future directions of research. -->
 
 <!-- **Lack of reflection and moments to reinforce what is being learnt.** To support younger coders unsure what to do next or who struggle to stay on task, I sought to create another kind of map to help them navigate their game making journey. -->
 
-I have de-prioritised Maps as an area of study in this thesis partly this is due to it well explored in other research []FIND SOURCES,
-
-and partly as the implementation was patchy as I concentrated on more narrative and in person reflection (see later chapter on Methods)
 
 MOVE LATER? FINAL CHAPTER?
+
 It is of value to out like key tensions in the design that maps have the potential to address in more formal teaching environments. I am currently investigating replicating the use of maps process using online tools to reduce complexity and preparation time. This theme is also explored later in this section.
 
+OTHER RESEARCH?
 
 #### Learning Dimensions Map
 
@@ -660,12 +654,12 @@ In learning environments where there is a lot of choice assessing learners via o
 When researching hands-on tinkering in Science museums Bevan and Petrich [-@petrich_it_2013] worked with educators to examine video footage of families interacting with exhibits to make a structured list of the learning they observed. The resulting map of learning dimensions included underlying science concepts but also contained more general skills and helping behaviours involved in exploratory learning processes.
 
 Research on _concept maps_ [@canas2003summary] as methods for teachers and researchers to identify key learning suited to particular computing projects. Has traction for NCCE quick read. The value of facilitators mapping out concept which are likely to occur in project work can help with x, y and z.
+
 The knock on effect on reducing barriers to agency is of particular interest to this study.
 
-// REWRITE FOLLOWING
 <!-- Another chapter in this collection identified concept maps and observation as methods for teachers and researchers to identify key learning suited to particular computing projects.  -->
 
-One of the outcomes of my research was to extract some of the concepts and practices that learners engaged with when making games from hours of recorded material. While some are common to existing Computational Thinking frameworks others, including systems thinking concepts, are more unique to game making. Table 4.x. shows my resulting map of learning dimensions for the 3M game making model.
+One of the outcomes of my research was to extract some of the concepts and practices that learners engaged with when making games from hours of recorded material. While some concepts are common to existing computational thinking frameworks others, including systems thinking concepts, are more unique to game making. Table 4.x. shows my resulting map of learning dimensions for the 3M game making model.
 
 |      Coding Concepts    | Systems Patterns    | Design Practices|
 |--------------|-----------|------------|
@@ -679,7 +673,34 @@ One of the outcomes of my research was to extract some of the concepts and pract
 | Input Event |   | Reusing and Remixing      |
 
 
-This process of mapping such frameworks may be overly time-consuming for many full-time teachers. However, teachers may also use and adapt existing maps and frameworks based on their own classroom experience to help their observation of students. Because these frameworks can also help students to navigate their own learning journey the effort serves a double purpose.
+
+BE CLEAR ON PURPOSE OF THE RESOURCES
+
+This process of mapping this framework, while time-consuming, is potentially of use for teachers and other researchers to help their observation of students in game making activities. To further aid practioners, in P5 I restructured paper and online resources on game design patterns to included links to to online descriptions of the concepts in the learning dimensions map.
+
+The following boxed section outlines a desinged mission card which
+
+BOX BEGINS
+
+Your mission is to apply the following pattern to your game. There are supporting step-by-step resources available if you need them. When you finish be sure to reflect on how adding this pattern helps your understanding of the computing concepts and similar patterns listed. This concludes your mission.  
+
+* **Name of Game Design Pattern:** Jumping on Enemies to Zap them
+
+* **Type Pattern:** Game Mechanic
+
+* **Description:** If the player is descending from a jump when they touch the enemy the player is zapped and in this case disappears.
+
+* **Need for Pattern:** Enemies create challenge and being able to jump on an enemy is a good way of clearing the area you want to explore.
+
+* **Coding Concepts involved:** Arrays[^8], Change Listener[^9]
+
+* **Links to other Computing Patterns:** Systems Dynamics[^10]
+
+* **Related Game Patterns:** You'll need to have added the **Add Enemies** pattern to your game before you can add this one.
+
+BOX ENDS
+
+Because these frameworks can also help students to navigate their own learning journey the effort serves a double purpose.
 
 <!--
 While this is an informal way of using maps the are other approaches that are more formal including one called a concept map which is a visual representation of target specialised knowledge. There is a section on concept maps as part of the teach computing website here. https://blog.teachcomputing.org/how-we-teach-computing/. -->
@@ -709,19 +730,23 @@ While this element of the learning design is beyond the main remit of this study
 |Systems concepts are embedded in many games but the process of direct teaching of such systems can be complex and interrupt and distract from other design activities.   |  Systems related design patterns were identified and placed in a challenge themed section. Extra missions which highlight game challenge and user experience may help learners to explore systems concepts within the game context. (outlined in Methods chapter -  use Schnell & GSM literature = their terminology is Game elements)|   
 
 
-#### Resolving the conflict by minimising elements in an informal setting
+#### Resolving the conflict in an informal setting by ignoring it
 
-Ultimately, I gave up on this approach as it did not align with the view of agency that I was trying to create in the learning environment.
+My progress in this study would have been more direct if I had not attempted to resolve the conflict between the informal choice and curriculum alignment. Ultimately, despite develping resources, I did not introduce the resources consistently with the learners of this study, instead prioritising time spent in on-going hands on experimentation, peer learning and playful activities.
 
-Unknowingly aligning with Matusov's discussion on the negative impact on authorial agency of processes designed to align with curricular goals, I put off introducing the learning map in to the informal design process.
+In retrospect, this decision is appropriate to the informal context of this environment and reflects the lack of external motivation to align to curricular concepts.
 
+<!-- has been is helpful to provide a clearer the focus of this study on the possibilities of informal spaces. - >
+<!-- I also de-prioritised learning maps as an area of study in this thesis partly this is due to it well explored in other research []FIND SOURCES, -->
+<!-- and partly as the implementation was patchy as I concentrated on more narrative and in person reflection (see later chapter on Methods) -->
 
-The learning dimensions map was designed to link with particular conceptions of learning whilst still retaining a sense of the uniqueness of the affordances of this design. The settings are, CT in school curriculums, systems thinking, design approaches. These align broadly with a STEM approach. The rationale behind this is that Game Making commonly aligns with these curriculum areas and they are particularly suited to explore via iterative game making.
+This reflection was helpful for me as a researcher in that it helped decided to keep the focus on this study on more informal and organically evolving processes. This emerging perspective also developed as I read underlying ontological approaches to the socio cultural understandings of learning which problematise the separate of the content to be learned
 
-The process of developing the learning dimensions map was helpful for me as a researcher in that it helped decided to keep the focus on this study on more informal and organically evolving processes. This emerging perspective also developed as I read underlying ontological approaches to the socio cultural understandings of learning which problematise the separate of the content to be learned
+The process of researching conceptions of agency has allowed me to align my intuitive reluctance to steer participants towards the more abstract curricular concepts to interpretations of agency. In particular, Matusov's discussion on the negative impact on authorial agency of processes designed to align with curricular goals resonates.
 
-While I attempted to resolve this by adopting Bevan and al's observational approach, the process of making this more relevant and recognisable for UK teachers arguably drew me off course. This theme is explored in detail in the next two chapters.
+DEVELOP THIS
 
+Thus arguably my attempts resolve this conflict and making this design more relevant and recognisable for UK teachers arguably drew me off course. This theme is explored in more detail in the next two chapters.
 
 <!-- NOTE EXPAND IF USEFUL -->
 
@@ -738,33 +763,32 @@ Examples include;
 For example, the use of CT concepts in a framework, listed as part of the initial design pattern card, which could then be discussed, ticked off or otherwise reflected on. -->
 
 
-## 3. Participant conflict due to lack of access to tools
+## 3. Participant conflict due to lack of access and familiarity to tools
 
-**Nature of conflict - Frustrating delays - Not enough support from facilitator/s:  especially tech help - no dedicated documents, exiting docs not learner focused, coding process frustrating needing**
+**Nature of conflict - unfamilairity with tools- complexity of processes leading to frustration**
 
 This conflict, which surfaced in P1, was a  conflation of various tension which stemmed from lack of computer coding ability and lack of access to relevant tools.
 
 While tensions between lack of knowledge in how to undertake activities are common in learning environments, the informal nature of this learning setting made most classroom approaches unsuitable.
 
 
-### Tensions between authenticity in choice of toolset and user progress
+### Motivations around in choice of toolset
 
-Dimensions of authenticity are explored in the literature review. NOTE INCLUDE SUMMARY
+One motivation was to align to authentic web technology due to my previous experience. The reason for working with code this authentic bears exploration. Characteristics of broader dimensions of authenticity of tools and processess in learning environments are explored in the literature review. A brief summarying being: similarirty to workplace settings; facilitating activity which serves a need of participants; an ability to showcased resulting work to an audience. FIND CITATION PBL?
 
-  - similar to workplace
-  - has a real purpose for Participants
-  - can be showcased in public for an external audience
-
-While the digital focus of the activity allowed for a high level of authenticity in the sense of aligning with professional practice, due to the potentially prohibitive complexity of tools, I took care to screen participants from processes and tools that were unrealistic for novices to use.
-
-<!-- In the activities of study, a high degree of authenticity made possible, in a material sense, by the digital nature of the learning resources. Beyond a general purpose computer, no prohibitive equipment is needed. -->
+While my choice of open source digital tools allowed for a high level of aligning with professional practices, it was also potentially complex in terms of use of tools.
 
 My motivation for choice of code language (Javascript, Phaser) was driven by desire to be authentic and extensible. The use of glitch.com as a code playground significantly reduced technical barriers for students related to this choice. In terms of first impressions, learners first experience of the experience was in the process of playing a game in a webpage and controlling the character using the computers arrow/ cursor keys which for many was a familiar process.
 
-### Impact of use of code playground
+<!-- I took care to screen participants from processes and tools that were unrealistic for novices to use. -->
 
-The this section outlines the design characteristics of the coding tools in a face-to-face learning environment, namely: an incomplete 2D platformer; pixel graphics; with graphical scaffolding for text-based code; and deliberately incomplete thus inviting improvement.
+<!-- NOTE - PERHAPS EXPLORE COMPLEXITIY OF IDES AS A BARRIER IN RESEARCH - SEE BLUE JAY AND GREEN FOOT TRAINING IDEs -->
+<!-- In the activities of study, a high degree of authenticity made possible, in a material sense, by the digital nature of the learning resources. Beyond a general purpose computer, no prohibitive equipment is needed. -->
 
+
+### Code playground (as IDE?)
+
+This section outlines the design characteristics of the coding tools in a face-to-face learning environment, namely: an incomplete 2D platformer; pixel graphics; with graphical scaffolding for text-based code; and deliberately incomplete thus inviting improvement.
 
 #### Addressing complexity of code environment with code playground
 In terms of technical complexity, using a code playground removed the process of setting up a server for web development, and the delay and complexity of transferring files to the server. While the code project consisted of several files of javascript, HTML and CSS, learners were shielded from the complexity of how they were interlinked.
@@ -776,7 +800,52 @@ In journal notes and in video data I observed participants developing responses 
  -
 <!-- In the video data analysed, there were practically no extended blockages to undertaking work related to the use of this environment. While this study does not attempt to quantify this factor, the experience compares very favourably to my experiences of using and teaching coding environments. -->
 
-There are similarities and differences between the use of code playgrounds by novices and professionals.
+
+**Why not Scratch? - differences in terms of tool set**
+NOTE - MOVED - SO REMOVE / MOVE PARTS ON THE TEMPLATE
+
+As explored in the literature review, an extensive body of research on the design motivations and impact on learners exists for the creative coding tools Scratch. While Scratch, is aimed a broad range of media creation, much of this research involves game making as a popular genre of media of young people.
+
+I chose to not use Scratch, partly as it was well reseached and partly to prioritise authenticity of tool set despite the removal of certain technical barriers offered by such a self-contained tools set.  
+
+<!-- In my design the tools set is distinct from tools like Scratch, Logo in that while those tools were designed to be self-contained, the use of a JS library in a web coding environment is more open-ended. -->
+<!-- In my design, tools are more authentic and familiar in terms of using a professional framework and a web technology around which the internet browser is based on. -->
+
+I now explore 2/3 key obstacles and how they were addressed.
+
+Creation and migration of graphical and audio assets.
+
+In Scatch there are tabs which host simplified graphical and audio studios. Design decisions priorise ease of use and the ability to record audio right into the program.
+
+In P1, I used a variety of graphical and audio tools including Scratch to create backgrounds, Piskel to create pixel graphics, Audacity, Sonic Pi for background music, Bxr online for sound effects. 
+
+Participants would then have to save assets in a compatible format and upload them to the code playground, and link the file using a line of code.
+
+The difference in friction to adding assets is significant and the possibilities for it to go wrong also great.
+
+Hoewver, to counter this, I observered a a palpable  a sense of achievement of doing this in code.
+
+While in P2 and P3 I reduced the number of tools suggested to create graphical assets, there was still the process of transfer from one to the other creating a porous learning environment.
+
+The clear software-based self-containment of scratch has clear advantages of control and reducing possibility for compounding errors. Microworlds also offer practical restriction and containment.
+
+I mirrored the goal of simplifying the creative process by implementing the following steps: creating the template, pulling up relevant variables to the fore, creating a grid to allow easy level design, and simplifying the syntax and the structure of the game code.
+
+These design decisions create a kind of border between the participants experience and the open ecology of learning to code in the wild.
+
+The following issues are relevant to the learner experience- other ways to enclose / protect )
+- Issue of the complexity of support and technical documentation
+
+
+**Discussion on design principles / heuristics  community design and guiding community behaviours :**
+
+While Resnick's principles  heuristics provide a useful tool for designers creating tools there was in early research less guidance for practitioners supporting creative coding activities . the goal is more to provide a playground. Much less intrinsic guidance to help seed community practices.
+
+Later research on Scratch also explored the value of the community for feedback and for motivational factors. Research shows the value of the Scratch online community has the potential to x, y and z.
+
+
+
+
 
 <!-- I began by mirroring social model of learning like CoL and CoP and their propose apprenticeship-based approaches. Specifically, introducing possible code solutions to implement the ideas of participants. However, limits to my time involvement and my technical fluency hindered this process creating stress in myself and frustration and hesitancy on participants to get direct help.
 
@@ -962,6 +1031,10 @@ DEVELOP THIS SECTION -->
 
 **observations?**
 
+There are similarities and differences between the use of code playgrounds by novices and professionals.
+DEVELOP IF NEEDED
+
+
 While tempting to say that the use of a template is educational scaffolding and therefore not authentic to a work place setting environment, the use of starting templates is also a common work place tactic. For example the js libary boostrap comes with starter templates.
 
 Glitch has many such starter templates aimed at professionals trying out a different code language or framework.
@@ -983,7 +1056,7 @@ While the use of authentic tools and processes, while challenging for novices, c
 
 ## 4. Participant conflict due to lack of relevant technical support
 
-**Nature of conflict - Frustrating delays - Not enough support from facilitator/s:  especially tech help - no dedicated documents, exiting docs not learner focused, coding process frustrating **
+**Nature of conflict - Frustrating delays - Not enough support from facilitator/s:  especially tech help - no dedicated documents, exiting docs not learner focused, coding process frustrating**
 
 While tensions between lack of knowledge in how to undertake activities are common in learning environments, the informal nature of this learning setting made most classroom approaches unsuitable.
 
@@ -1175,30 +1248,6 @@ NOTE WHY IS THIS METAPHOR USEFUL - CLARIFYs -
 <!-- extended by Kafai and Burke to include open windows - can be used to evaluate this design and other designs.   -->
 <!-- NOTE - ADD KEY DETAILS OF THE ACCESSIBILITY / CHALLENGE OF THE CORE TOOLS SET -->
 
-**How my design differs in terms of tool set**
-
-In my design the tools set is distinct from tools like Scratch, Logo in that while those tools were designed to be self-contained, the use of a JS library in a web coding environment is more open-ended.
-
-In my design, tools are more authentic and familiar in terms of using a professional framework and a web technology around which the internet browser is based on.
-
-While in P2 and P3 I reduced the number of tools suggested to create graphical assets, there was still the process of transfer from one to the other creating a porous learning environment.
-
-The clear software-based self-containment of scratch has clear advantages of control and reducing possibility for compounding errors. Microworlds also offer practical restriction and containment.
-
-I mirrored the goal of simplifying the creative process by implementing the following steps: creating the template, pulling up relevant variables to the fore, creating a grid to allow easy level design, and simplifying the syntax and the structure of the game code.
-
-These design decisions create a kind of border between the participants experience and the open ecology of learning to code in the wild.
-
-The following issues are relevant to the learner experience- other ways to enclose / protect )
-- Issue of the complexity of support and technical documentation
--
-
-**Discussion on design principles / heuristics  community design and guiding community behaviours :**
-
-While Resnick's principles  heuristics provide a useful tool for designers creating tools there was in early research less guidance for practitioners supporting creative coding activities . the goal is more to provide a playground. Much less intrinsic guidance to help seed community practices.
-
-Later research on Scratch also explored the value of the community for feedback and for motivational factors. Research shows the value of the Scratch online community has the potential to x, y and z.
-
 In my design, the use of GDPs in various scope forms this base: quick start activities; GDPs from a menu; novel GDPs/
 
 <!-- The online only nature of the toolset does facilitate certain aspects of community participation by shifting the working space away from a desktop only environment, this facilitating some sharing by default.  -->
@@ -1335,3 +1384,11 @@ https://docs.google.com/document/d/1DRgpgIUfq5XIktYy-lX4WlviUDnffNc0v8SOeLGgHho/
 [^1]: https://network23.org/3m-gamemaking/an-overview-of-game-coding-tools/
 [^2]: https://mickfuzz.github.io/makecode-platformer-101/
 [^3]: https://glitch-game-makers-manual.glitch.me/
+[^4]: map of GDP
+
+
+
+
+[^8]: https://mickfuzz.github.io/makecode-platformer-101/learningDimensions#arrays
+[^9]: https://mickfuzz.github.io/makecode-platformer-101/learningDimensions#change-listener
+[^10]: https://mickfuzz.github.io/makecode-platformer-101/learningDimensions#systems-dynamics
