--- a/_posts/thesis_chapters/tocs/2023-9-4-Design.md_toc.md
+++ b/_posts/thesis_chapters/tocs/2023-9-4-Design.md_toc.md
@@ -37,11 +37,11 @@
     -   [Using Physical Maps of Missions as Game Design Patterns -
         COMPRESS](#using-physical-maps-of-missions-as-game-design-patterns---compress)
         -   [Learning Dimensions Map](#learning-dimensions-map)
-        -   [NOTES ON TENSIONS WHICH THIS LEARNING MAP HAS POTENTIAL TO
-            ADDRESS](#notes-on-tensions-which-this-learning-map-has-potential-to-address)
-        -   [Resolving the conflict by minimising elements in an
-            informal
-            setting](#resolving-the-conflict-by-minimising-elements-in-an-informal-setting)
+        -   [Observations on tensions which the learning and
+            navigational maps have potential to
+            address.](#observations-on-tensions-which-the-learning-and-navigational-maps-have-potential-to-address.)
+        -   [Resolving the conflict in an informal setting by ignoring
+            it](#resolving-the-conflict-in-an-informal-setting-by-ignoring-it)
 -   [3. Participant conflict due to lack of access to
     tools](#participant-conflict-due-to-lack-of-access-to-tools)
     -   [Tensions between authenticity in choice of toolset and user
@@ -54,10 +54,14 @@
         template](#design-choices-of-the-half-baked-template)
         -   [Addressing barriers with
             template](#addressing-barriers-with-template)
-    -   [Observations on the impact of the half-baked game
-        template](#observations-on-the-impact-of-the-half-baked-game-template)
-        -   [Design behaviours encouraged through use of game
-            template](#design-behaviours-encouraged-through-use-of-game-template)
+    -   [Design behaviours encouraged through use of game
+        template](#design-behaviours-encouraged-through-use-of-game-template)
+        -   [Variable editing for
+            movement:](#variable-editing-for-movement)
+        -   [Level design and
+            prototyping:](#level-design-and-prototyping)
+        -   [Use of pixel art to seed narrative and art
+            creativity:](#use-of-pixel-art-to-seed-narrative-and-art-creativity)
         -   [Observations on design behaviours encouraged through use of
             game
             template](#observations-on-design-behaviours-encouraged-through-use-of-game-template)
